--- a/.github/workflows/Windows10.yml
+++ b/.github/workflows/Windows10.yml
@@ -7,7 +7,6 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-  
     
     steps:
       - name: Downloading & Installing Essentials
@@ -17,3 +16,6 @@ jobs:
 
       - name: Log In To AnyDesk
         run: cmd /c show.bat
+
+      - name: Time Counter
+        run: python time.py
